Add Hungarian and Romanian translations
Also small refactor to keep the list of available languages in one place

--- a/config/locales/el.yml
+++ b/config/locales/el.yml
@@ -6,15 +6,21 @@ el:
   errors:
     messages:
       email: "Μη έγκυρη ηλεκτρονική διεύθυνση"
+  time:
+    formats:
+      for_today: '%l:%M %P'
   date:
     formats:
+      for_this_year: '%e %b'
+      for_another_year: '%-d/%-m/%y'
       datepicker: "%d-%m-%Y"
   error:
     access_denied: "Μη επιτρεπτή πρόσβαση."
-    cant_join_subgroup: "Δεν μπορείς να συμμετάσχεις σε υπο-ομάδα εάν δεν είσαι μέλος της κεντρικής ομάδας."
+    cant_join_subgroup: "Δεν μπορείτε να συμμετάσχετε σε υπό-ομάδα εάν δεν είστε μέλος της κεντρικής ομάδας."
     cant_modify_position: "Αυτή η πρόταση έχει κλείσει."
     cant_state_position: "Αυτή η πρόταση έχει κλείσει."
     cant_view_member_profile: "Είναι αδύνατον να δείτε τα προφίλ των μελών επειδή δεν είστε στην ίδια ομάδα."
+    contribution: "Παρακαλούμε συνδεθείτε για να κάνετε μια συνεισφορά."
     discussion_not_created: "Η συζήτηση δεν μπόρεσε να δημιουργηθεί."
     group_not_archived: "Η ομάδα δεν μπόρεσε να αρχειοθετηθεί."
     invalid_close_date: "Μη έγκυρη ημερομηνία κλεισίματος, παρακαλούμε ελέγξτε ότι η ημερομηνία δεν έχει παρέλθει."
@@ -22,27 +28,27 @@ el:
     image_upload_fail: "Δεν μπορείτε να ανεβάσετε την εικόνα. Βεβαιωθείτε ότι η εικόνα είναι κάτω από 1 MB και είναι αρχείο  .jpeg, .png, ή .gif."
     permission_to_invite: "Δεν έχετε το δικαιώμα να προσκαλέσετε νέα μέλη."
     position_not_updated: "Δεν μπόρεσε να ενημερωθεί η θέση."
-    settings_not_updated: "Οι ρυθμίσεις σας δεν μπόρεσαν να ανανεωθούν."
+    settings_not_updated: "Οι ρυθμίσεις σας δεν ενημερώθηκαν."
     group_request_already_verified: "Συγνώμη! Ο σύνδεσμος επιβεβαιώσης που πατήσατε έχει ήδη επιβεβαιωθεί. Εάν δεν ακούσατε νέα από εμάς μέσα σε 48 ώρες, επικοινωνήστε με το contact@loomio.org"
     group_request_already_accepted: "Συγνώμη! Αυτή η πρόσκληση είναι άκυρη ή ήδη έχει γίνει δεκτή."
     group_request_contribution: "Παρακαλούμε επιλέξτε κατηγορία. Αυτό δεν είναι μια δέσμευση για να πληρώσει, αλλά χρήσιμες πληροφορίες για να μας βοηθήσει να σχεδιάσουμε καλύτερα το μοντέλο μας. Ευχαριστούμε!"
     group_request_invalid_token: "Συγνώμη! Αυτό είναι ένα άκυρο διακριτικό"
-    group_private_or_not_found: "Η ομάδα δεν βρέθηκε. Αυτή η ομάδα πιθανώς είναι ιδιωτική. Εάν κάποιος σας έδωσε αυτόν τον σύνδεσμο, ζητήστε του να σας προσκαλέσει στην ομάδα."
+    group_private_or_not_found: "Η ομάδα δεν βρέθηκε \n\nΑυτή η ομάδα πιθανώς είναι ιδιωτική. Εάν κάποιος σας έδωσε αυτόν τον σύνδεσμο, ζητήστε του να σας προσκαλέσει στην ομάδα."
     group_already_setup: "Η ομάδα που προσπαθείτε να στήσετε υπάρχει ήδη."
     proposal_already_exists: "Υπάρχει ήδη ανοιχτή πρόταση για αυτή την συζήτηση."
+    not_found: "Το αντικείμενο δεν βρέθηκε. Πιθανώς έχει διαγραφεί."
   alert:
     duplicate_email: "%{which_email} βρίσκετε ήδη στην ομάδα."
-    not_found: "%{item} δεν βρέθηκε. Πιθανώς έχει διαγραφεί."
   notice:
-    admin_rights_removed: "%{which_user}'s δικαιώματα διαχειριστή έχουν αφαιρεθεί."
+    admin_rights_removed: "Του/της %{which_user} τα δικαιώματα διαχειριστή έχουν αφαιρεθεί."
     email_added: "%{which_email} έχει προστεθεί στην ομάδα."
     member_removed: "Το μέλος αφαιρέθηκε."
     membership_approved: "Το μέλος εγκρίθηκε"
     membership_requested: "Αίτηση μέλους έχει ζητηθεί."
     membership_request_canceled: "Αίτηση μέλους απορίφθη."
     membership_request_ignored: "Αίτηση μέλους αγνοήθηκε."
-    settings_updated: "Οι ρυθμίσεις σας έχουν ανανεωθεί."
-    user_made_admin: "%{which_user} έχει γίνει διαχειριστής."
+    settings_updated: "Οι ρυθμίσεις σας έχουν ενημερωθεί."
+    user_made_admin: "Ο/Η %{which_user} έχει γίνει διαχειριστής/ρια."
     you_have_left_group: "Αφαιρεθήκατε από το %{which_group}."
   warning:
     cant_remove_last_admin: "Είστε ο τελευταίος διαχειριστής και δεν μπορείτε να αφαιρεθείτε."
@@ -63,7 +69,7 @@ el:
     group_created: "Η ομάδα δημιουργήθηκε επιτυχώς."
     members_added: "Μέλη προστέθηκαν στην ομάδα."
     position_submitted: "Θέση υποβλήθηκε"
-    position_updated: "Θέση αναθεωρήθηκε."
+    position_updated: "Η θέση ενημερώθηκε."
     proposal_created: "Η πρόταση δημιουργήθηκε επιτυχώς."
     proposal_deleted: "Η πρόταση διαγράφηκε."
   datetime:
@@ -101,19 +107,22 @@ el:
       almost_x_years:
         one: "1 χρόνος"
         other: "%{count} χρόνια"
+  inbox:
+    dropdown-btn: 'Εισερχόμενα'
+    empty: Είστε ενήμεροι! Δεν υπάρχουν σχόλια που δεν έχετε δει.
   notifications:
     header: "Ειδοποιήσεις"
-    new_discussion: "Ξεκινήστε μια νέα συζήτηση"
-    new_motion: "Δημιουργήστε μια νέα πρόταση"
+    new_discussion: "Ξεκίνησε μια νέα συζήτηση"
+    new_motion: "Δημιουργήθηκε μια νέα πρόταση"
     motion_closed:
-      by_user: "Κλείστε την πρόταση"
-      by_expiry: "Αυτή η πρόταση έχει κλείσει."
+      by_user: "έκλεισε η πρόταση"
+      by_expiry: "Η πρόταση έχει κλείσει."
     new_vote: "%{position} στην πρόταση"
     new_comment: "έχετε σχολιάσει στην συζήτηση"
-    comment_liked: "σας άρεσε το σχόλιο στην συζήτηση"
-    user_mentioned: "έχετε αναφερθεί σε ένα σχόλιο στην/στον"
+    comment_liked: "άρεσε το σχόλιο σας στην συζήτηση"
+    user_mentioned: "σας ανεφέραν σε ένα σχόλιο στην/στον"
     membership_requested: "έχει αιτηθεί για μέλος στο"
-    user_added_to_group: "πρόσθεσε στην ομάδα"
+    user_added_to_group: "προστεθήκατε στην ομάδα"
     motion_closing_soon: "Η πρόταση κλείνει σύντομα"
     motion_blocked: "μπλόκαρε την πρόταση"
   edit_discussion_context: "Επεξεργασία περιεχομένου συζήτησης"
@@ -126,9 +135,10 @@ el:
   sign_out: "Έξοδος"
   sign_in: "Είσοδος"
   sign_in_details: "για να συμμετάσχετε. Δεν έχετε συνδεθεί ακόμη."
-  tagline: "Δημιουργώντας έναν κόσμο όπου είναι εύκολο για τον καθένα να συμμετάσχει σε αποφάσεις που τον αφορούν."
+  tagline: "Δημιουργώντας έναν κόσμο όπου είναι εύκολο για τον καθένα να συμμετάσχει σε αποφάσεις που τους αφορούν."
+  or_sign_in_html: "Εάν έχετε ήδη λογαριασμό, <a href='%{link}'0>πατήστε εδώ για να εισέλθετε</a>."
   click_to_dismiss: "Πατήστε εδώ για απορίψετε αυτό το μήνυμα."
-  generic_confirm: "Είστε σίγουρος/η?"
+  generic_confirm: "Είστε σίγουροι?"
   discussion_helper_text:
     header: "Καλώς ήρθατε στην πρώτη σας συζήτηση"
     message: "<p>Το θέμα βρίσκετε στο πάνω μέρος της σελίδας, με το περιεχόμενο του από κάτω.</p><p>Η συζήτηση είναι στα αριστερά, οι αποφάσεις έρχονται στα δεξιά. Εάν πιστεύετε πως η ομάδα είναι έτοιμη να πάρει μια απόφαση, μπορείτε να κάνετε μια πρόταση για να την σκεφτεί η ομάδα.</p>"
@@ -148,21 +158,21 @@ el:
   number_pending: 'και  %{pending} αναμένεται '
   edit_memberships: 'Επεξεργαστείτε τις αιτήσεις μελών'
   add_new_member: "Προσθέστε νέο μέλος"
-  invite_members_to_group: "Προσκαλέστε μέλη στο %{which_group}"
+  invite_members_to_group: "Προσκαλέστε μέλη στο/στη %{which_group}"
   remaining_invites: "προσκλήσεις απομένουν"
-  need_more_invites_html: "Χρειάζεστε περισσότερα? Το Loomio είναι σε κλειστή δοκιμαστική έκδοση, το οποίο σημαίνει ότι είμαι ακόμα υπό ανάπτυξη και έχουμε περιορισμένους πόρους για υποστήριξη χρηστών. Εάν θέλετε να αυξήσετε το μέγεθος της ομάδα σας %{href}."
+  need_more_invites_html: "Χρειάζεστε περισσότερα? Το Loomio είναι σε κλειστή δοκιμαστική έκδοση, το οποίο σημαίνει ότι είμαι ακόμα υπό ανάπτυξη και έχουμε περιορισμένους πόρους για την υποστήριξη χρηστών. Εάν θέλετε να αυξήσετε το μέγεθος της ομάδα σας %{href}."
   get_in_touch_link: "μείνετε συντονισμένοι"
   email_members_in_group: "Στείλτε μήνυμα (email) στα μέλη του %{which_group}"
   subject_error: "Παρακαλώ συμπληρώστε ένα θέμα"
   subject_placeholder: "Γράψτε ένα θέμα"
-  message_error: "Παρακαλώ συμπληρώστε στο μήνυμα"
-  message_placeholder: "Γράψτε ένα μήνυμα στα μέλη του %{which_group}."
+  message_error: "Παρακαλώ συμπληρώστε το μήνυμα"
+  message_placeholder: "Γράψτε ένα μήνυμα στα μέλη της ομάδας %{which_group}."
   email_group_members: "Στείλτε ηλεκτρονικό μήνυμα στα μέλη της ομάδας"
   edit_group_settings: "Επεξεργαστείτε τις ρυθμίσεις της ομάδας"
   leave_group: "Φύγετε από την ομάδα"
-  confirm_leave_group: "Είστε σίγουροι ότι θέλετε να φύγετε από το %{which_group}?"
+  confirm_leave_group: "Είστε σίγουροι ότι θέλετε να φύγετε από την ομάδα %{which_group}?"
   deactivate_group: "Απενεργοποιήστε την ομάδα"
-  confirm_deactivate_group: "Περιμένετε!!! Είστε σίγουροι ότι θέλετε να απενεργοποιήσετε το %{which_group}? Δεν θα μπορείτε να βλέπετε πια την ομάδα. Ωστόσο, εάν επιθυμείτε να ξανά-ενεργοποιήσετε την ομάδα πάλι μπορείτε να μας το ζητήσετε στέλνοντας ηλεκτρονικό μήνυμα (email) στο contact@loomio.org."
+  confirm_deactivate_group: "Περιμένετε!!! Είστε σίγουροι ότι θέλετε να απενεργοποιήσετε την ομάδα %{which_group}? Δεν θα μπορείτε να βλέπετε πια την ομάδα. Ωστόσο, εάν επιθυμείτε να ξανά-ενεργοποιήσετε την ομάδα πάλι μπορείτε να μας το ζητήσετε στέλνοντας ηλεκτρονικό μήνυμα στο contact@loomio.org."
   invited_users: "Τα μέλη προσκαλέστηκαν"
   confirm_remove_user: "Είστε σίγουροι ότι θέλετε να αφαιρέσετε τον/την %{which_user} από την ομάδα?"
   remove_admin: "Αφαιρέστε διαχειριστή"
@@ -178,7 +188,7 @@ el:
   confirm_remove_membership_request: "Είστε σίγουροι πως επιθυμείτε να αποσύρετε την αίτηση μέλους για αυτήν την ομάδα?"
   subgroups: "Υπο-ομάδες"
   create_a_subgroup: "Δημιουργήστε μια υπο-ομάδα"
-  select_members_to_add: "Επιλέξτε μέλη για να προσθέσετε στο %{which_group}"
+  select_members_to_add: "Επιλέξτε μέλη για να προσθέσετε στην ομάδα %{which_group}"
   empty_parent_group: "Παρακαλούμε προσθέστε τα μέλη στην κύρια ομάδα πρώτα."
   invite_members: "Προσκαλέστε μέλη"
   new_subgroup: "Νέα υπο-ομάδα"
@@ -192,8 +202,8 @@ el:
   create_group: "Δημιουργία ομάδας"
   creating_group: "Δημιουργείτε ομάδα"
   edit_group: "Επεξεργασία ομάδας"
-  update_group: "Ανανέωση ομάδας"
-  updating_group: "Ανανεώνεται η ομάδα"
+  update_group: "Ενημέρωση ομάδας"
+  updating_group: "Ενημερώνεται η ομάδα"
   start_a_discussion: "Ξεκινήστε μια συζήτηση"
   group_description: "Περιγραφή ομάδας"
   discussion_items:
@@ -209,7 +219,7 @@ el:
   current_decision: "Τωρινή απόφαση"
   previous_decisions: "Προηγούμενες αποφάσεις"
   see_previous_decisions: "Δείτε τις προηγούμενες αποφάσεις"
-  create_new_proposal: "Δημιουργία νέας πρότασης"
+  create_new_proposal: "Δημιουργήστε μια νέα πρόταση"
   empty_decision_list_html: "Έτοιμοι να πάρετε απόφαση? <br> Οποιοσδήποτε μπορεί να ξεκινήσει μια πρόταση."
   empty_decision_index: "Αυτή η ομάδα δεν έχει πάρει καμία απόφαση ακόμα."
   empty_discussion_list: "Δεν υπάρχει δραστηριότητα στην συζήτηση ακόμα."
@@ -217,7 +227,7 @@ el:
   empty_discussion_index_group: "Αυτή η ομάδα δεν έχει καμία συζήτηση ακόμα."
   discussion_context:
     started_when: "Ξεκίνησε πριν από %{when} "
-    last_edited: "Επεξεργάστηκε τελευταία περίπου πριν από %{when}"
+    last_edited: "Η τελευταία επεξεργασία έγινε περίπου πριν από %{when}"
     see_revision_history: "Δείτε το ιστορικό αναθεωρήσεων"
   description_history:
     header: "Ιστορικό αναθεωρήσεων"
@@ -286,6 +296,7 @@ el:
     getting_started: "Ξεκινώντας"
     getting_started_description: "Στα αριστερά, η ομάδα συζητάει ένα θέμα, ανταλλάζει ιδέες και πληροφορίες. Όταν υπάρχει μια απόφαση που πρέπει να κάνει η ομάδα, έρχεται στα δεξιά."
     getting_the_most: 'Παίρνοντας τα περισσότερα από το Loomio'
+    have_your_say: "Πείτε την γνώμη σας"
     have_your_say_details_html: |
       <p>Όταν είστε έτοιμοι να πάρετε την απόφαση σας, πατήστε ένα από τα τέσσερα κουμπιά απόφασης.</p>
       <p>Όταν έχετε πάρει την απόφαση σας, δώστε μια περιγραφική εξήγηση. Κάτω από την πίτα,
@@ -329,14 +340,6 @@ el:
     positions_disagree_description: "<span>Διαφωνώ</span> σημαίνει πως πιθανώς υπάρχει καλύτερη εναλλακτική, αλλά θα συμφιλιωθείτε με την απόφαση της ομάδας."
     positions_block_description: "<span>Μπλοκάρισμα</span> σημαίνει πως έχετε πολύ σοβαρές ενστάσεις και θα είσαστε δυστυχισμένος έτσι και αυτή η πρόταση προχωρήσει."
     start_discussion: "Ξεκινήστε μια ενδιαφέρουσα συζήτηση"
-    start_discussion_html: |
-      <p>Όταν ξεκινάτε μια συζήτηση, βεβαιωθείτε ότι ο τίτλος εκφράζει το θέμα συνοπτικά.
-      Χρησιμοποιήστε τον πίνακα περιεχομένου για να δώσετε όλες τις απαραίτητες πληροφορίες που είναι απαραίτητες για
-      την ομάδα να έχει μια παραγωγική και τεκμηριωμένη συζήτηση.</p>
-      <p>Κατά την διάρκεια της συζήτησης, ο πίνακας περιεχόμενου μπορεί να ενημερωθεί με νέες πληροφορίες
-      που προέρχονται στο φως. Καθώς και την διευκρίνηση του θέματος, μπορείτε να χρησιμοποιήσετε αυτό τον χώρο για
-      την κατανομή των πόρων, να συνοψίζετε την συζήτηση όπως εξελίσσετε ή να περιγράφει τα
-      πρωτόκολλα λήψης αποφάσεων που η ομάδα χρησιμοποιεί.</p>
     start_proposal: "Γράψτε μια καθαρή πρόταση"
     start_proposal_html: "<p> Εάν κάνετε τον τίτλο σαφή και συνοπτικό, οι άνθρωποι θα γνωρίζουν άμεσα \nεάν συμφωνούν ή διαφωνούν με το θέμα.</p>\n<p>Δεν είναι το τέλος του κόσμου εάν μια πρόταση δεν πάρει ξεκάθαρη συμφωνία άμεσα.\nΕάν η ομάδα δεν της αρέσει η πρώτη πρόταση, οποιοσδήποτε μπορεί να ξεκινήσει μια νέα πρόταση για\nνα αντιμετωπιστούν οι ανησυχίες\
       \ που εκφράστηκαν, και να συνεχίσει η διαδικασία για να προχωρήσει εμπρός το θέμα.</p>\n<p>Διαμέσου αυτής της δυναμικής διαδικασίας, η συλλογική σοφίας της ομάδας μπορεί να δημιουργήσει καλύτερες\nιδέες από οποιονδήποτε άλλον έρθει με τις δικές του.</p>\n<p>Η προθεσμία σε μια πρόταση μπορεί να επεκταθεί ανά πάσα στιγμή, αν φαίνεται ότι μια απόφαση\
@@ -350,13 +353,33 @@ el:
     invitation: 'Συμβουλές για να γράψετε μια  μεγάλη πρόσκληση'
     proposal: 'Συμβουλές για να γράψετε καθαρά μια πρόταση'
     vote: 'Μπορείτε να αλλάξετε την θέση σας ανά πάσα στιγμή'
+  contribution:
+    any_amount: Οποιαδήποτε μιας φοράς συνεισφοράς
+    monthly_html: Μηνιαία συνεισφορά <span>(USD)</span>
+    one_time_html: Μία φορά συνεισφορά <span>(USD)</span>
+    tooltip: Επιλέξτε την συνεισφορά σας
+    thought_about_contributing: Επιλέξτε την συνεισφορά σας
+    thought_about_contributing_description: |
+      Το Loomio είναι μια συνεργατική κοινωνική επιχείρηση που δουλεύει ώστε να κάνει εύκολο να συμμετάσχει οποιοσδήποτε σε αποφάσεις που τον αφορούν.
+
+      Πιστεύουμε πως τα χρήματα δεν πρέπει να είναι εμπόδιο, έτσι αναπτύσσουμε ένα μοντέλο εσόδων που σας δίνει τον έλεγχο για το ποσό που πληρώνετε.
+
+      Η συνεισφορά σας σημαίνει πως μπορούμε να κρατήσουμε το Loomio ανεξάρτητο, δωρεάν από διαφημίσεις, και να καθοδηγείτε από την κοινωνίας μας των χρηστών.
+
+      Ευχαριστούμε που το κάνετε πραγματικότητα!
+    thank_you_title: Ευχαριστούμε!
+    thank_you_body: |
+      Σας ευχαριστούμε για την συμβολή σας στο Loomio!
+      Η οικονομική συνδρομή σας θα μας βοηθήσει να συνεχίσουμε να το κάνουμε συνεργατικό εργαλείο λήψης αποφάσεων και προσβάσιμο στον κόσμο.
+
+      Θα λάβετε ηλεκτρονικό μήνυμα σύντομα με την απόδειξη για την συνεισφορά σας.
   resend_confirmation: "Επαναποστολή οδηγιών επιβεβαιώσης"
   new_password: "Νέος Κωδικός"
   confirm_new_password: "Επιβεβαίωση νέου κωδικού"
   change_your_password: "Άλλαξε τον κωδικό σου"
   change_my_password: "Αλλαγή του κωδικού μου"
   send_password_reset: "Στείλε μου οδηγίες για επαναφορά του κωδικού μου"
-  blank_details: "(άφησε το κενό εάν δεν επιθυμείς να το αλλάξεις)"
+  blank_details: "(αφήστε το κενό εάν δεν επιθυμείτε να το αλλάξετε)"
   password_confirmation: "Επιβεβαίωση κωδικού"
   current_password: "Τωρινός κωδικός"
   password_details: "(χρειαζόμαστε τον τωρινό κωδικό σας για να επιβεβαιώσουμε τις αλλαγές)"
@@ -364,7 +387,7 @@ el:
   remember_me: "Να με θυμάσε"
   signing_in: "Είσοδος"
   dont_have_account: "Δεν έχετε λογαριασμό?"
-  closed_beta: "Είμαστε σε κλειστή δοκιμή και δεν δεχόμαστε δημόσιες υπογραφές (ακόμα!)."
+  closed_beta: "Είμαστε σε κλειστή δοκιμή και δεν δεχόμαστε δημόσιες εγγραφές (ακόμα!)."
   closed_beta_details: "Εάν ανήκετε σε ομάδα η οποία χρησιμοποιεί το Loomio αλλά δεν έχετε Loomio λογαριασμό, παρακαλούμε επικοινωνήστε με το άτομο του οργανισμό σας, ο οποίος είναι διαχειριστής στο Loomio, και ζητήστε του να σας προσθέσει στην ομάδα."
   forgot_your_password: "Ξεχάσατε τον κωδικό σας?"
   confirmation_not_received: "Δεν λάβατε οδηγίες επιβεβαίωσης?"
@@ -457,6 +480,7 @@ el:
         name: "Πλήρες Όνοματεπώνυμο"
         email: "Ηλεκτρονική Διεύθυνση"
         password: "Κωδικός"
+        password_confirmation: "Επιβεβαίωση κωδικού"
         language_preference: "Γλώσσα"
     options:
       group:
@@ -504,12 +528,12 @@ el:
       intro: "Σας δείχνει τι συμβαίνει στις ομάδες σας στο Loomio τις τελευταίες 24 ώρες"
       subject: "Loomio - Σύνοψη των τελευταίων 24 ωρών"
     group_email:
-      intro: "%{who} έκανε μια ανακοίνωση στην ομάδα %{group}:"
+      intro: "Ο/Η %{who} έκανε μια ανακοίνωση στην ομάδα %{group}:"
     group_membership_approved:
       intro: "Η αίτηση σας για πρόσβαση στην ομάδα '%{group_name}' στο Loomio έχει εγκριθεί."
       subject: "Αίτηση Μέλους εγκρίθηκε"
     membership_request:
-      intro: "%{name} (%{email}) έχει ζητήσει πρόσβαση σε μία από τις Loomio ομάδες σας."
+      intro: "Ο/Η %{name} (%{email}) έχει ζητήσει πρόσβαση σε μία από τις Loomio ομάδες σας."
       subject: "Νέα αίτηση μέλους από %{who}"
       view_group: "Μπορείς να εγκρίνεις ή να απορρίψεις την αίτηση εδώ"
     mentioned:
@@ -566,6 +590,7 @@ el:
   proposal: "Πρόταση"
   prev: "Προηγούμενο"
   options: "Ρυθμίσεις"
+  other: "Άλλο"
   ok_got_it: "Εντάξει, το έχω!"
   save: "Αποθήκευση"
   saving: "Αποθηκεύει"
