Refactor set_locale and add language options to footer

--- a/config/locales/el.yml
+++ b/config/locales/el.yml
@@ -205,6 +205,7 @@ el:
   updating_group: "Ενημερώνεται η ομάδα"
   start_a_discussion: "Ξεκινήστε μια συζήτηση"
   group_description: "Περιγραφή ομάδας"
+  edit_group_description: "Επεξεργασία περιγραφής ομάδας"
   discussion_items:
     new_discussion: "Η συζήτηση δημιουργήθηκε"
     new_motion: "Η πρόταση δημιουργήθηκε"
@@ -225,8 +226,8 @@ el:
   empty_discussion_index: "Δεν υπάρχουν συζητήσεις σε καμία από τις ομάδες σας."
   empty_discussion_index_group: "Αυτή η ομάδα δεν έχει καμία συζήτηση ακόμα."
   discussion_context:
-    started_when: "Ξεκίνησε πριν από %{when} "
-    last_edited: "Η τελευταία επεξεργασία έγινε περίπου πριν από %{when}"
+    started_html: "Ξεκίνησε πριν από %{when} από τον/την <a href='%{link}' class='%{link_class}'>%{who}</a>"
+    last_edited_html: "Επεξεργάστηκε τελευταία πριν από %{when} από τον/την <a href='%{link}' class='%{link_class}'>%{who}</a>"
     see_revision_history: "Δείτε το ιστορικό αναθεωρήσεων"
   description_history:
     header: "Ιστορικό αναθεωρήσεων"
@@ -339,6 +340,8 @@ el:
     positions_disagree_description: "<span>Διαφωνώ</span> σημαίνει πως πιθανώς υπάρχει καλύτερη εναλλακτική, αλλά θα συμφιλιωθείτε με την απόφαση της ομάδας."
     positions_block_description: "<span>Μπλοκάρισμα</span> σημαίνει πως έχετε πολύ σοβαρές ενστάσεις και θα είσαστε δυστυχισμένος έτσι και αυτή η πρόταση προχωρήσει."
     start_discussion: "Ξεκινήστε μια ενδιαφέρουσα συζήτηση"
+    start_discussion_html: "<p>Όταν ξεκινάτε μια συζήτηση, βεβαιωθείτε ότι ο τίτλος εκφράζει το θέμα συνοπτικά.\nΧρησιμοποιήστε τον Πίνακα Περιεχομένου για να δώσετε όλες τις απαραίτητες πληροφορίες που χρειάζονται ώστε\nη ομάδα να έχει μια παραγωγική και τεκμηριωμένη συζήτηση.</p>\n<p>Κατά την διάρκεια της συζήτησης, ο Πίνακας περιεχομένου μπορεί να\
+      \ ενημερωθεί όσο έρχονται\nνέες πληροφορίες. Καθώς και για την αποσαφήνιση του θέματος, μπορείτε να χρησιμοποιήσετε αυτόν τον χώρο \nδιαμοιράζοντας τους πόρους, συνοψίζοντας την συζήτηση όσο εξελίσσεται, η να περιγράφεται τα\nπρωτόκολλα λήψης αποφάσεων που χρησιμοποιεί η ομάδα σας.</p>\n"
     start_proposal: "Γράψτε μια καθαρή πρόταση"
     start_proposal_html: "<p> Εάν κάνετε τον τίτλο σαφή και συνοπτικό, οι άνθρωποι θα γνωρίζουν άμεσα \nεάν συμφωνούν ή διαφωνούν με το θέμα.</p>\n<p>Δεν είναι το τέλος του κόσμου εάν μια πρόταση δεν πάρει ξεκάθαρη συμφωνία άμεσα.\nΕάν η ομάδα δεν της αρέσει η πρώτη πρόταση, οποιοσδήποτε μπορεί να ξεκινήσει μια νέα πρόταση για\nνα αντιμετωπιστούν οι ανησυχίες\
       \ που εκφράστηκαν, και να συνεχίσει η διαδικασία για να προχωρήσει εμπρός το θέμα.</p>\n<p>Διαμέσου αυτής της δυναμικής διαδικασίας, η συλλογική σοφίας της ομάδας μπορεί να δημιουργήσει καλύτερες\nιδέες από οποιονδήποτε άλλον έρθει με τις δικές του.</p>\n<p>Η προθεσμία σε μια πρόταση μπορεί να επεκταθεί ανά πάσα στιγμή, αν φαίνεται ότι μια απόφαση\
@@ -356,22 +359,19 @@ el:
     any_amount: Οποιαδήποτε μιας φοράς συνεισφοράς
     monthly_html: Μηνιαία συνεισφορά <span>(USD)</span>
     one_time_html: Μία φορά συνεισφορά <span>(USD)</span>
-    tooltip: Επιλέξτε την συνεισφορά σας
+    tooltip: Συνεισφορά
     thought_about_contributing: Επιλέξτε την συνεισφορά σας
-    thought_about_contributing_description: |
-      Το Loomio είναι μια συνεργατική κοινωνική επιχείρηση που δουλεύει ώστε να κάνει εύκολο να συμμετάσχει οποιοσδήποτε σε αποφάσεις που τον αφορούν.
-
-      Πιστεύουμε πως τα χρήματα δεν πρέπει να είναι εμπόδιο, έτσι αναπτύσσουμε ένα μοντέλο εσόδων που σας δίνει τον έλεγχο για το ποσό που πληρώνετε.
-
-      Η συνεισφορά σας σημαίνει πως μπορούμε να κρατήσουμε το Loomio ανεξάρτητο, δωρεάν από διαφημίσεις, και να καθοδηγείτε από την κοινωνίας μας των χρηστών.
-
-      Ευχαριστούμε που το κάνετε πραγματικότητα!
-    thank_you_title: Ευχαριστούμε!
+    thought_about_contributing_description: "Το Loomio είναι ένα μια συλλογική κοινωνική επιχείρηση που εργάζεται ώστε να κάνει εύκολο για οποιονδήποτε να συμμετάσχει σε αποφάσεις που τον αφορούν.\n\nΠιστεύουμε ότι τα λεφτά δεν θα έπρεπε να αποτελούν εμπόδιο, έτσι αναπτύσσουμε ένα εναλλακτικό μοντέλο εσόδων το\nοποίο σας καθιστά υπεύθυνους για το ποσό\
+      \ που πληρώνετε. \n\nΗ συνεισφορά σας σημαίνει ότι μπορούμε να κρατήσουμε το Loomio ανεξάρτητο, δωρεάν από διαφημίσεις, και καθοδηγούμενο από την κοινότητα των χρηστών μας\n\nΕυχαριστούμε που το κάνετε αυτό δυνατόν!\n"
+    thank_you_title: Ευχαριστούμε για την συνεισφορά σας στο Loomio!
     thank_you_body: |
-      Σας ευχαριστούμε για την συμβολή σας στο Loomio!
-      Η οικονομική συνδρομή σας θα μας βοηθήσει να συνεχίσουμε να το κάνουμε συνεργατικό εργαλείο λήψης αποφάσεων και προσβάσιμο στον κόσμο.
+      Η συνεισφορά σας μας βοηθάει να παραδώσουμε εύκολα συλλογικές λήψεις αποφάσεων στον κόσμο.
 
-      Θα λάβετε ηλεκτρονικό μήνυμα σύντομα με την απόδειξη για την συνεισφορά σας.
+      Θα λάβετε σύντομα ένα ηλεκτρονικό μήνυμα με την απόδειξη για την συνεισφορά σας.
+
+      Όλοι είναι ευπρόσδεκτοι να συμμετάσχουν στην κοινότητα του Loomio, όπου συνομιλάμε για το πως θα το κάνουμε το καλύτερο εργαλείο και πως θα το βελτιώσουμε.
+
+      <a href='https://www.loomio.org/groups/3'>Πήγαινε με στην ομάδα της κοινότητας του Loomio </a>
   resend_confirmation: "Επαναποστολή οδηγιών επιβεβαιώσης"
   new_password: "Νέος Κωδικός"
   confirm_new_password: "Επιβεβαίωση νέου κωδικού"
