--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -535,13 +535,31 @@ en:
   #
 
   payment_details:
-    select_your_plan: "Select your plan"
-    info: "You'll be asked to enter your credit card details after you choose the plan that suits your group."
-    people_limit_html: "Up to <strong>%{people}</strong> people"
-    monthly_amount: "$%{dollars}/month"
-    prices_in_us_dollars: "Prices are in US dollars"
-    footer: "Is your group larger than 100 people?"
     contact_us_html: "Please contact us at <a href='mailto:accounts@loomio.org' target='_blank'>accounts@loomio.org</a>"
+    current_plan_html: "Your current plan is: <strong>%{subscription_plan}</strong>"
+    details: "Payment details"
+    footer: "Is your group larger than 100 people?"
+    info: "You'll be asked to enter your credit card details after you choose the plan that suits your group."
+    monthly_amount: "$%{dollars}/month"
+    payment_plan_contact_html: "To update your payment plan please contact us at <a href='mailto:accounts@loomio.org' target='_blank'>accounts@loomio.org</a>"
+    people_in_group: "You have %{people_in_group} people in your group"
+    people_limit_html: "Up to <strong>%{people}</strong> people"
+    prices_in_us_dollars: "Prices are in US dollars"
+    select_your_plan: "Select your plan"
+    subscription:
+      table:
+        description_html: "You'll be asked to enter credit card details at the end of your <span>30-day free trial.</span>"
+        price1_html: "<span>US</span> $30/mo"
+        price2_html: "<span>US</span> $50/mo"
+        price3_html: "<span>US</span> $100/mo"
+        price4_html: "<span>US</span> $200/mo"
+        price5_html: "<a href='mailto:accounts@loomio.org' target='_blank'>Talk to us!</a>"
+        quantity1: "Up to 10 people"
+        quantity2: "Up to 25"
+        quantity3: "Up to 50"
+        quantity4: "Up to 100"
+        quantity5: "More than 100"
+        title_html: "<strong>Payment plans</strong>"
 
   #
   # SEARCH
