--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -536,12 +536,13 @@ en:
 
   payment_details:
     select_your_plan: "Select your plan"
-    info: "You'll be asked to enter your credit card details after you choose the plan that suits your group."
+    note_about_paypal_html: "Our payment system currently uses Paypal. If you can't use Paypal, please contact us at <a href='mailto:accounts@loomio.org' target='_blank'>accounts@loomio.org</a> to set up a payment method that works for you."
     people_limit_html: "Up to <strong>%{people}</strong> people"
     monthly_amount: "$%{dollars}/month"
     prices_in_us_dollars: "Prices are in US dollars"
     footer: "Is your group larger than 100 people?"
-    contact_us_html: "Please contact us at <a href='mailto:accounts@loomio.org' target='_blank'>accounts@loomio.org</a>"
+    contact_us_html: "Email us at <a href='mailto:accounts@loomio.org' target='_blank'>accounts@loomio.org</a> and we'll figure something out :)"
+    description: "Up to %{people} people (US$%{dollars} monthly)"
 
   #
   # SEARCH
