change dollars to amount

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -584,18 +584,18 @@ en:
     footer: "Is your group larger than 100 people?"
     select_your_plan: "Select your plan"
     note_about_paypal_html: "Our payment system currently uses Paypal. If you can't use Paypal, please contact us at <a href='mailto:accounts@loomio.org' target='_blank'>accounts@loomio.org</a> to set up a payment method that works for you."
-    monthly_amount: "$%{dollars}/month"
+    monthly_amount: "$%{amount}/month"
     payment_plan_contact_html: "To update your payment plan please contact us at <a href='mailto:accounts@loomio.org' target='_blank'>accounts@loomio.org</a>"
     people_in_group: "You have %{people_in_group} people in your group"
     people_limit_html: "Up to <strong>%{people}</strong> people"
     prices_in_us_dollars: "Prices are in US dollars"
     footer: "Is your group larger than 100 people?"
     contact_us_html: "Email us at <a href='mailto:accounts@loomio.org' target='_blank'>accounts@loomio.org</a> and we'll figure something out :)"
-    description: "Up to %{people} people (US$%{dollars} monthly)"
+    description: "Up to %{people} people (US$%{amount} monthly)"
     subscription:
       table:
         description_html: "You'll be asked to enter credit card details at the end of your <span>30-day free trial.</span>"
-        price_html: "<span>US</span> $%{dollars}/mo"
+        price_html: "<span>US</span> $%{amount}/mo"
         price_talk_html: "<a href='mailto:accounts@loomio.org' target='_blank'>Talk to us!</a>"
         quantity: "Up to %{people} people"
         quantity_more: "More than 100"
